--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-/build/
-
+# IDE settigns
 /.idea/
 /.vscode/
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Fresh build directory
+_fresh/
+# npm dependencies
+node_modules/
