--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,9 @@
 {
   "lock": false,
   "tasks": {
-    "start": "deno run -A --watch=src/static/,src/routes/ src/dev.ts",
+    "start": "deno run -A src/main.ts",
+    "watch": "deno run -A --watch=src/static/,src/routes/ src/dev.ts",
     "build": "deno run -A src/dev.ts build",
-    "preview": "deno run -A src/main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
   "lint": {
